# Ptree-Loader

./: CMakeLists.txt  README.md
Example/: CMakeLists.txt
Example/Ptrees/: root.json
Example/Ptrees/DirInfo/: subtree.2.info  subtree.3.info
Example/Scripts/: load.info.cmd.in  load.json.cmd.in  load.xml.cmd.in
Ptree Loader/: CMakeLists.txt  PtreeLoader.h
Ptree Loader/Example/: CMakeLists.txt  load.info.cmd.in  load.json.cmd.in  load.xml.cmd.in  main.cpp
Ptree Loader/Example/Ptrees/: root.info
Ptree Loader/Example/Ptrees/DirInfo/: subtree.2.info  subtree.4.info
Ptree Loader/Example/Ptrees/DirJson/: subtree.1.json  subtree.2.json
PtreeLoader/: CMakeLists.txt  PtreeLoader.h
PtreeLoader/Example/: load.info.cmd.in  load.json.cmd.in  load.xml.cmd.in
PtreeLoader/Example/Ptrees/: root.xml
PtreeLoader/Example/Ptrees/DirInfo/: subtree.1.info  subtree.3.info  subtree.5.info
PtreeLoader/Example/Ptrees/DirXml/: subtree.1.xml
